Move tool settings bar animation to layout package to avoid animating overflow panel.

--- a/ui/appui-react/src/appui-react/widget-panels/ToolSettings.scss
+++ b/ui/appui-react/src/appui-react/widget-panels/ToolSettings.scss
@@ -38,12 +38,3 @@
   padding-top: 5px;
   padding-bottom: 2px;
 }
-
-.toolsettings-appear {
-  transform: translateY(-100%);
-}
-
-.toolsettings-appear-active {
-  transform: translateY(100%);
-  transition: Y 800ms;
-}
